package edu.fiuba.algo3.modelo;

public interface Simbolo {
}
