@startuml

class Pais {}

interface Ronda {}

class Ataque {}

class Reagrupamiento {}

class Colocacion {}

Ronda <|.. Ataque
Ronda <|.. Reagrupamiento
Ronda <|.. Colocacion

class Tarjeta {}

interface EstadoTarjeta {}

interface Simbolo {}

Tarjeta *-- Simbolo

Tarjeta *- Pais

Tarjeta *- EstadoTarjeta

class TarjetaActivada {}
class TarjetaInactiva {}

EstadoTarjeta <|.. TarjetaActivada
EstadoTarjeta <|.. TarjetaInactiva


@enduml